# OxiNoti

./: Cargo.toml  README.md  config.toml  default.nix  flake.nix  shell.nix  style.css
.direnv/: flake-profile-1-link  flake-profile-3-link  flake-profile-4-link
.github/workflows/: rust.yml
nix/: default.nix  hm.nix
src/: main.rs
src/daemon/: mod.rs
src/ui/: mod.rs
src/ui/utils/: config.rs  mod.rs  notificationbutton.rs
