[package]
name = "oxinoti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories-next = "2.0.0"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
gtk = { version = "*", package = "gtk" }
gtk-layer-shell = "*"
gdk-pixbuf = "*"
